# sugo

./: .bazelignore  .bazelrc  .copier-answers.yml  .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  Makefile  README.md  go.mod  go.sum
.github/workflows/: go.yml
arg/: BUILD.bazel  arg.go  arg_test.go
cmd/mustgen/: BUILD.bazel  mustgen.go
cmd/refgen/: BUILD.bazel  refgen.go
defergroup/: BUILD.bazel  defergroup.go  defergroup_test.go
errors/must/: BUILD.bazel  must.go  must_test.go  recover.go
par/: BUILD.bazel  par.go  par_test.go
ptr/deref/: BUILD.bazel  deref.go
ptr/ref/: BUILD.bazel  ref.go
ranger/: BUILD.bazel  dim.go  dim_test.go  ranger.go  ranger_test.go
timeout/: BUILD.bazel  timeout.go  timeout_test.go
