load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["defergroup.go"],
    importpath = "github.com/jaeyeom/sugo/defergroup",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["defergroup_test.go"],
    embed = [":go_default_library"],
)
