load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mustgen.go"],
    importpath = "github.com/jaeyeom/sugo/cmd/mustgen",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mustgen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
